--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 ################Link and Credentials  ###############################
 aspire_link = https://aspireapp.odoo.com/
 aspire_link_userId = user@aspireapp.com
-aspire_link_password =àøc\u02DCİ\u000Eáá¤k\u017D9-\u2122&ô
+aspire_link_password =Ã Ã¸c\u02DCÃ\u000EÃ¡Ã¡Â¤k\u017D9-\u2122&Ã´
 aspire_link_invalid_userId = tpaul@aspireapp.com
 ##################   Test Data   ########################
-prodName = Tiffin Box Test11
+prodName = Guitar
 invQuantity = 101.00
 mafQty = 11.00
